connect to websocket!!!

--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -6,6 +6,26 @@
     <link rel="stylesheet" href="/abridge/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<script type="text/javascript">
+    var ws_protocol = 'ws://';
+    if (location.protocol == 'https:') {
+        ws_protocol = 'wss://';
+    }
+    const ws = new WebSocket(ws_protocol + location.host + '/abridge/ws/[% format!("{:?}", self.seat).to_lowercase() %]');
+    console.log('did websocket');
+
+    ws.onopen = function () {
+        console.log('connected');
+    };
+    ws.onmessage = function (event) {
+        let msg = JSON.parse(event.data);
+        console.log(msg);
+    };
+    ws.onclose = function () {
+        console.log('disconnected');
+        location.reload();
+    };
+</script>
 
 <body>
     <div class="hand" id="north">[% if self.seat == North || self.game.dummy == Some(North) { self.game.north } else { %]North[% } %]</div>
