--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -15,9 +15,16 @@
 <div class="hand" id="west">[% if self.game.hand_visible_to(West, self.seat) { self.game.playable_cards(Seat::West, self.seat) } else { %]West[% } %]</div>
 <div class="hand" id="east">[% if self.game.hand_visible_to(East, self.seat) { self.game.playable_cards(Seat::East, self.seat) } else { %]East[% } %]</div>
 <div class="table">
-    [% for c in self.game.played.iter().cloned() {
-        c
-    } %]
+    [% if let Some(lead) = self.game.lead {
+        let s = (4 + Seat::North as usize - self.game.lead.unwrap() as usize) % 4;
+    if s < self.game.played.len() { self.game.played[s] } else { %] <span></span> [% }
+        let s = (4 + Seat::West as usize - self.game.lead.unwrap() as usize) % 4;
+        if s < self.game.played.len() { self.game.played[s] } else { %] <span></span> [% }
+        let s = (4 + Seat::East as usize - self.game.lead.unwrap() as usize) % 4;
+        if s < self.game.played.len() { self.game.played[s] } else { %] <span></span> [% }
+        let s = (4 + Seat::South as usize - self.game.lead.unwrap() as usize) % 4;
+        if s < self.game.played.len() { self.game.played[s] } else { %] <span></span> [% }
+     } %]
 </div>
 <div class="hand" id="south">[% if self.game.hand_visible_to(South, self.seat) { self.game.playable_cards(Seat::South, self.seat) } else { %]South[% } %]</div>
 [% if self.game.bidder() == Some(self.seat) {
