--- a/abridge/src/bid.html
+++ b/abridge/src/bid.html
@@ -1,22 +1,19 @@
 [%
 match self {
     Bid::Pass => {
-        %] Pass [%
+        %]Pass[%
     }
     Bid::Double => {
-        %] X [%
+        %]X[%
     }
     Bid::Redouble => {
-        %] XX [%
+        %]XX[%
     }
     Bid::Suit(level,suit) => {
         %]<span class="[% suit.name() %]">[% level %]</span>[% suit
     }
-    Bid::NT(_) => {
-        %] NT? [%
-    }
-    _ => {
-        %] ??? [%
+    Bid::NT(i) => {
+        i %]NT[%
     }
 }
 %]
