try to avoid red/black diamonds/clubs

--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -4,6 +4,8 @@
 <head>
     <title> [% format!("{:?}", self.0.seat) %] </title>
     <link rel="stylesheet" href="/abridge/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <script type="text/javascript">
