--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -13,11 +13,11 @@
 </table>
 [% if Some(self.seat) == self.game.turn() { %]<audio autoplay><source src="your-play.mp3" type="audio/mpeg"></audio>[% } %]
 [% if self.game.hand_done { %]
-<div class="hand" id="north">[% self.game.original_north %]</div>
-<div class="hand" id="west">[% self.game.original_west %]</div>
-<div class="hand" id="east">[% self.game.original_east %]</div>
+<div class="hand" id="north">[% self.game.original_hands[North] %]</div>
+<div class="hand" id="west">[% self.game.original_hands[West] %]</div>
+<div class="hand" id="east">[% self.game.original_hands[East] %]</div>
 <div class="table"></div>
-<div class="hand" id="south">[% self.game.original_south %]</div>
+<div class="hand" id="south">[% self.game.original_hands[South] %]</div>
 [% } else { %]
 <div class="hand" id="north">[% if self.game.hand_visible_to(North, self.seat) { self.game.playable_cards(Seat::North, self.seat) } else { %]North[% } %]</div>
 <div class="hand" id="west">[% if self.game.hand_visible_to(West, self.seat) { self.game.playable_cards(Seat::West, self.seat) } else { %]West[% } %]</div>
