--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -13,21 +13,21 @@
 </table>
 [% if Some(self.seat) == self.game.turn() { %]<audio autoplay><source src="your-play.mp3" type="audio/mpeg"></audio>[% } %]
 [% if self.game.hand_done { %]
-<div class="hand" id="north">[% self.game.original_hands[North] %]</div>
-<div class="hand" id="west">[% self.game.original_hands[West] %]</div>
-<div class="hand" id="east">[% self.game.original_hands[East] %]</div>
+<div class="hand[% if Some(North) == self.game.dummy() { %] dummy[% } %]" id="north">[% self.game.original_hands[North] %]</div>
+<div class="hand[% if Some(West) == self.game.dummy() { %] dummy[% } %]" id="west">[% self.game.original_hands[West] %]</div>
+<div class="hand[% if Some(East) == self.game.dummy() { %] dummy[% } %]" id="east">[% self.game.original_hands[East] %]</div>
 <div class="table"></div>
 <div class="hand" id="south">[% self.game.original_hands[South] %]</div>
 [% } else { %]
-<div class="hand" id="north">
+<div class="hand[% if Some(North) == self.game.dummy() { %] dummy[% } %]" id="north">
     [% if self.game.names[North].len() > 0 { %]<span class="name">[% self.game.names[North] %]</span>[% } %]
     [% if self.game.hand_visible_to(North, self.seat) { self.game.playable_cards(Seat::North, self.seat) } else { %]North[% } %]
 </div>
-<div class="hand" id="west">
+<div class="hand[% if Some(West) == self.game.dummy() { %] dummy[% } %]" id="west">
     [% if self.game.names[West].len() > 0 { %]<span class="name">[% self.game.names[West] %]</span>[% } %]
     [% if self.game.hand_visible_to(West, self.seat) { self.game.playable_cards(Seat::West, self.seat) } else { %]West[% } %]
 </div>
-<div class="hand" id="east">
+<div class="hand[% if Some(East) == self.game.dummy() { %] dummy[% } %]" id="east">
     [% if self.game.names[East].len() > 0 { %]<span class="name">[% self.game.names[East] %]</span>[% } %]
     [% if self.game.hand_visible_to(East, self.seat) { self.game.playable_cards(Seat::East, self.seat) } else { %]East[% } %]
 </div>
@@ -43,7 +43,7 @@
         if s < self.game.played.len() { self.game.played[s] } else { %] <span></span> [% }
      } %]
 </div>
-<div class="hand" id="south">
+<div class="hand[% if Some(South) == self.game.dummy() { %] dummy[% } %]" id="south">
     [% if self.game.names[South].len() > 0 { %]<span class="name">[% self.game.names[South] %]</span>[% } %]
     [% if self.game.hand_visible_to(South, self.seat) { self.game.playable_cards(Seat::South, self.seat) } else { %]South[% } %]
 </div>
