start edit name

--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -21,6 +21,10 @@
     };
     ws.onmessage = function (event) {
         document.getElementById('main').innerHTML = event.data;
+        setTimeout(function () {
+            var name = document.getElementById('myname');
+            name.focus();
+        }, 1);
     };
     ws.onclose = function () {
         console.log('disconnected');
@@ -28,6 +32,10 @@
     };
     function send_message(action) {
         ws.send(action);
+    }
+    function sendname() {
+        let name = document.getElementById('myname').innerText;
+        ws.send(JSON.stringify({ "Name": name }));
     }
 </script>
 
