--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -20,15 +20,15 @@
 <div class="hand" id="south">[% self.game.original_hands[South] %]</div>
 [% } else { %]
 <div class="hand[% if Some(North) == self.game.dummy() { %] dummy[% } %][% if Some(North) == self.game.turn() { %] turn[% } %]" id="north">
-    [% if self.game.names[North].len() > 0 { %]<span class="name">[% self.game.names[North] %]</span>[% } %]
+    <span class="name"[% if North == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[North] %]</span>
     [% if self.game.hand_visible_to(North, self.seat) { self.game.playable_cards(Seat::North, self.seat) } else { %]North[% } %]
 </div>
 <div class="hand[% if Some(West) == self.game.dummy() { %] dummy[% } %][% if Some(West) == self.game.turn() { %] turn[% } %]" id="west">
-    [% if self.game.names[West].len() > 0 { %]<span class="name">[% self.game.names[West] %]</span>[% } %]
+    <span class="name"[% if West == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[West] %]</span>
     [% if self.game.hand_visible_to(West, self.seat) { self.game.playable_cards(Seat::West, self.seat) } else { %]West[% } %]
 </div>
 <div class="hand[% if Some(East) == self.game.dummy() { %] dummy[% } %][% if Some(East) == self.game.turn() { %] turn[% } %]" id="east">
-    [% if self.game.names[East].len() > 0 { %]<span class="name">[% self.game.names[East] %]</span>[% } %]
+    <span class="name"[% if East == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[East] %]</span>
     [% if self.game.hand_visible_to(East, self.seat) { self.game.playable_cards(Seat::East, self.seat) } else { %]East[% } %]
 </div>
 <div class="table">
@@ -44,7 +44,7 @@
      } %]
 </div>
 <div class="hand[% if Some(South) == self.game.dummy() { %] dummy[% } %][% if Some(South) == self.game.turn() { %] turn[% } %]" id="south">
-    [% if self.game.names[South].len() > 0 { %]<span class="name">[% self.game.names[South] %]</span>[% } %]
+    <span class="name"[% if South == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[South] %]</span>
     [% if self.game.hand_visible_to(South, self.seat) { self.game.playable_cards(Seat::South, self.seat) } else { %]South[% } %]
 </div>
 [% } %]
