use cookie to remember player name

--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -34,6 +34,7 @@
         window.clearTimeout(timer);
         timer = window.setTimeout(function () {
             let name = document.getElementById('myname').innerText;
+            document.cookie = "name=" + name;
             ws.send(JSON.stringify({ "Name": name }));
         }, 5000);
     }
