include names after hand is done

--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -13,11 +13,19 @@
 </table>
 [% if Some(self.seat) == self.game.turn() { %]<audio autoplay><source src="your-play.mp3" type="audio/mpeg"></audio>[% } %]
 [% if self.game.hand_done { %]
-<div class="hand[% if Some(North) == self.game.dummy() { %] dummy[% } %]" id="north">[% self.game.original_hands[North] %]</div>
-<div class="hand[% if Some(West) == self.game.dummy() { %] dummy[% } %]" id="west">[% self.game.original_hands[West] %]</div>
-<div class="hand[% if Some(East) == self.game.dummy() { %] dummy[% } %]" id="east">[% self.game.original_hands[East] %]</div>
+<div class="hand[% if Some(North) == self.game.dummy() { %] dummy[% } %]" id="north">
+    <span class="name"[% if North == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[North] %]</span>
+    [% self.game.original_hands[North] %]</div>
+<div class="hand[% if Some(West) == self.game.dummy() { %] dummy[% } %]" id="west">
+    <span class="name"[% if West == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[West] %]</span>
+    [% self.game.original_hands[West] %]</div>
+<div class="hand[% if Some(East) == self.game.dummy() { %] dummy[% } %]" id="east">
+    <span class="name"[% if East == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[East] %]</span>
+    [% self.game.original_hands[East] %]</div>
 <div class="table"></div>
-<div class="hand" id="south">[% self.game.original_hands[South] %]</div>
+<div class="hand[% if Some(South) == self.game.dummy() { %] dummy[% } %]" id="south">
+    <span class="name"[% if South == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[South] %]</span>
+    [% self.game.original_hands[South] %]</div>
 [% } else { %]
 <div class="hand[% if Some(North) == self.game.dummy() { %] dummy[% } %][% if Some(North) == self.game.turn() { %] turn[% } %]" id="north">
     <span class="name"[% if North == self.seat { %] id="myname" contenteditable="True" oninput="sendname()" [% } %]>[% self.game.names[North] %]</span>
