start enabling robots, but need to fix getting updates during ai play

--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -42,6 +42,7 @@
 
 <body>
     <button class="redeal" [% Action::Redeal %]>Redeal</button>
+    <button class="robots" [% Action::SitAI %]>Robots</button>
     <main id="main">[% self.0 %]</main>
 </body>
 
