--- a/src/card.html
+++ b/src/card.html
@@ -1,2 +1,1 @@
-<!-- <span class="[% self.suit().name() %]">[% self.unicode().to_string() as UTF8 %]</span> -->
-<span class="[% self.suit().name() %]">[% self.suit() %][% self.rankname() %]</span>
+<span class="[% self.suit().name() %]">[% self.suit().unicode().to_string() as UTF8 %][% self.rankname() %]</span>
